--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "terminal.integrated.fontFamily": "Hack Nerd Font Mono"
+  "terminal.integrated.fontFamily": "Hack Nerd Font Mono",
+  "explorer.confirmDelete": false
 }
