--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,1 @@
-[alias]
-	tree = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	t = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	ta = log --graph  --all --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-	unstage = reset HEAD --
-[core]
-	editor = nvim
-	pager = less
-[gui]
-	encoding = utf-8
-[color]
-  ui = auto
-[user]
-	name = Yuki Matsushita
-	email = katsumeshi@gmail.com
-[github]
-	user = katsumeshi
-[merge]
-	ff = no
-[pull]
-  ff = only
+/Users/katsumeshi/dotfiles/.gitconfig
