--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "terminal.integrated.fontFamily": "Hack Nerd Font Mono",
-  "explorer.confirmDelete": false
+  "explorer.confirmDelete": false,
+  "redhat.telemetry.enabled": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
