--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .config/fish/conf.d/
 .config/fish/completions/
 .config/fish/fish_variables
-.config/karabiner/
 
 .config/flutter
+.config/karabiner/assets/complex_modifications
+.config/karabiner/automatic_backups
