fix: update tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,16 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+unbind -T copy-mode-vi MouseDragEnd1Pane 
+
+# remove delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
+
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -35,8 +45,15 @@ bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 
-
-
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'christoomey/vim-tmux-navigator'
-# run '~/.tmux/plugins/tpm/tpm'
+
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @themepack 'powerline/default/cyan'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+run '~/.tmux/plugins/tpm/tpm'
