--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,21 @@
+[core]
+  pager = delta
+[interactive]
+  diffFilter = delta --color-only
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
 [alias]
 	tree = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 	t = log --graph --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 	ta = log --graph  --all --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 	unstage = reset HEAD --
-[core]
-	editor = code --wait
-	pager = less
 [gui]
 	encoding = utf-8
 [color]
@@ -15,9 +25,13 @@
 	email = katsumeshi@gmail.com
 [github]
 	user = katsumeshi
-[merge]
-	ff = no
 [pull]
     ff = only
 [rebase]
   autosquash = true
+
+# [core]
+# 	editor = code --wait
+# 	pager = less
+# [merge]
+#	ff = no
