--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,13 +45,14 @@ bind-key -T copy-mode-vi 'M-j' select-pane -D
 bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 
+
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @themepack 'powerline/default/cyan'
+set -g @themepack 'powerline/double/red'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
