--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,12 @@
 
 .config/gcloud/
 .config/iterm2/
-.config/fish/functions/
 .config/configstore
 .config/nvim/plugin/
 
-.config/fish/conf.d/
-.config/fish/completions/
+# .config/fish/functions/
+# .config/fish/conf.d/
+# .config/fish/completions/
 .config/fish/fish_variables
 
 .config/flutter
