--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,21 +33,22 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 set -sg escape-time 10
 
 # See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
-bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
-bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
-bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
-
-bind-key -T copy-mode-vi 'M-h' select-pane -L
-bind-key -T copy-mode-vi 'M-j' select-pane -D
-bind-key -T copy-mode-vi 'M-k' select-pane -U
-bind-key -T copy-mode-vi 'M-l' select-pane -R
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+# bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+# bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+# bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+#
+# bind-key -T copy-mode-vi 'M-h' select-pane -L
+# bind-key -T copy-mode-vi 'M-j' select-pane -D
+# bind-key -T copy-mode-vi 'M-k' select-pane -U
+# bind-key -T copy-mode-vi 'M-l' select-pane -R
 
 
 set -g @plugin 'tmux-plugins/tpm'
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
