update starship config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color-bce"
 set -g default-terminal "xterm"
 
 set -g prefix C-a
@@ -32,6 +32,9 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
+
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=default,bg=colour234'
 
 
 set -g @plugin 'tmux-plugins/tpm'
