--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -2,3 +2,20 @@ add_newline = false
 
 [time]
 disabled = false
+format = '[$time]($style) '
+
+[git_branch]
+format = '[$symbol$branch(:$remote_branch)]($style) '
+symbol = '🌱 '
+truncation_length = 20
+
+[git_commit]
+commit_hash_length = 7
+tag_symbol = '🔖 '
+
+[gcloud]
+format = '[$symbol($project)]($style) '
+symbol = ' '
+
+[nodejs]
+format = '[$symbol($version )]($style)'
