--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,7 +8,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "workbench.colorTheme": "Night Owl",
+  "workbench.colorTheme": "Catppuccin Mocha",
   "terminal.integrated.profiles.osx": {
     "fish": {
       "path": "/opt/homebrew/bin/fish",
@@ -36,5 +36,7 @@
     },
     "Conceal": "vim",
     "Substitute": "vim"
-  }
+  },
+  "editor.fontFamily": "FiraCode Nerd Font Mono, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontSize": 13
 }
