update vscode settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,13 +38,14 @@ set -sg escape-time 10
 
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
