--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,12 +7,6 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
-  // "terminal.integrated.profiles.osx": {
-  //   "fish": {
-  //     "path": "/opt/homebrew/bin/fish",
-  //     "args": ["-l"]
-  //   }
-  // },
   "terminal.integrated.defaultProfile.osx": "fish",
   "editor.fontFamily": "FiraCode Nerd Font Mono, Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 13,
@@ -21,10 +15,76 @@
   "[go]": {
     "editor.defaultFormatter": "golang.go"
   },
-  "debug.javascript.autoAttachFilter": "disabled",
+  "debug.javascript.autoAttachFilter": "always",
   "go.toolsGopath": "/opt/homebrew/Cellar/go/1.20.1/libexec",
   "[sql]": {},
+  "githubPullRequests.pullBranch": "never",
+  "vscode-neovim.neovimExecutablePaths.darwin": "lvim",
+  "vscode-neovim.neovimExecutablePaths.linux": "lvim",
+  "vscode-neovim.neovimExecutablePaths.win32": "lvim",
+  "vscode-neovim.highlightGroups.ignoreHighlights": [
+    "EndOfBuffer",
+    "ErrorMsg",
+    "MoreMsg",
+    "ModeMsg",
+    "Question",
+    "VisualNC",
+    "WarningMsg",
+    "^Diff",
+    "Sign",
+    "SignColumn",
+    "^Spell",
+    "^Pmenu",
+    "^Tab",
+    "ColorColumn",
+    "QuickFixLine",
+    "MsgSeparator",
+    "MsgArea",
+    "^RedrawDebug",
+    "^.*MatchParen",
+    "^Nvim",
+    "Operator",
+    "Delimiter",
+    "Identifier",
+    "SpecialChar",
+    "Number",
+    "Type",
+    "String",
+    "Error",
+    "Comment",
+    "Constant",
+    "Special",
+    "Statement",
+    "PreProc",
+    "Underlined",
+    "Ignore",
+    "Todo",
+    "Character",
+    "Boolean",
+    "Float",
+    "Function",
+    "Conditional",
+    "Repeat",
+    "Label",
+    "Keyword",
+    "Exception",
+    "Include",
+    "Define",
+    "Macro",
+    "PreCondit",
+    "StorageClass",
+    "Structure",
+    "Typedef",
+    "Tag",
+    "SpecialComment",
+    "Debug",
+    "Folded",
+    "FoldColumn"
+  ],
   "workbench.colorCustomizations": {},
-  "genieai.openai.model": "gpt-3.5-turbo-0301",
-  "genieai.enableConversationHistory": true
+  "git.openRepositoryInParentFolders": "always",
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  },
+  "typescript.referencesCodeLens.enabled": true
 }
