remove nvim settings
update vscode keymap

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,90 +1,11 @@
 {
   "terminal.integrated.fontFamily": "FiraCode Nerd Font Mono, Menlo, Monaco, 'Courier New', monospace",
-  "explorer.confirmDelete": false,
-  "redhat.telemetry.enabled": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "terminal.integrated.defaultProfile.osx": "fish",
   "editor.fontFamily": "FiraCode Nerd Font Mono, Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 13,
   "workbench.colorTheme": "One Dark Pro Darker",
-  "editor.formatOnSave": true,
-  "[go]": {
-    "editor.defaultFormatter": "golang.go"
+  "extensions.experimental.affinity": {
+    "asvetliakov.vscode-neovim": 1
   },
-  "debug.javascript.autoAttachFilter": "always",
-  "go.toolsGopath": "/opt/homebrew/Cellar/go/1.20.1/libexec",
-  "[sql]": {},
-  "githubPullRequests.pullBranch": "never",
-  "vscode-neovim.neovimExecutablePaths.darwin": "lvim",
-  "vscode-neovim.neovimExecutablePaths.linux": "lvim",
-  "vscode-neovim.neovimExecutablePaths.win32": "lvim",
-  "vscode-neovim.highlightGroups.ignoreHighlights": [
-    "EndOfBuffer",
-    "ErrorMsg",
-    "MoreMsg",
-    "ModeMsg",
-    "Question",
-    "VisualNC",
-    "WarningMsg",
-    "^Diff",
-    "Sign",
-    "SignColumn",
-    "^Spell",
-    "^Pmenu",
-    "^Tab",
-    "ColorColumn",
-    "QuickFixLine",
-    "MsgSeparator",
-    "MsgArea",
-    "^RedrawDebug",
-    "^.*MatchParen",
-    "^Nvim",
-    "Operator",
-    "Delimiter",
-    "Identifier",
-    "SpecialChar",
-    "Number",
-    "Type",
-    "String",
-    "Error",
-    "Comment",
-    "Constant",
-    "Special",
-    "Statement",
-    "PreProc",
-    "Underlined",
-    "Ignore",
-    "Todo",
-    "Character",
-    "Boolean",
-    "Float",
-    "Function",
-    "Conditional",
-    "Repeat",
-    "Label",
-    "Keyword",
-    "Exception",
-    "Include",
-    "Define",
-    "Macro",
-    "PreCondit",
-    "StorageClass",
-    "Structure",
-    "Typedef",
-    "Tag",
-    "SpecialComment",
-    "Debug",
-    "Folded",
-    "FoldColumn"
-  ],
   "workbench.colorCustomizations": {},
-  "git.openRepositoryInParentFolders": "always",
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true
-  },
-  "typescript.referencesCodeLens.enabled": true
+  "svelte.enable-ts-plugin": true
 }
